@@ -7,11 +7,15 @@
 #include <config.h>
 #endif     // HAVE_CONFIG_H
 #endif     // DOXYGEN_SHOULD_SKIP_THIS
+#include <glade/glade.h>
 
 #include <dbus/dbus-glib-bindings.h>
+#include <gtk/gtktoggletoolbutton.h>
 
 #include "dbus-server-object.h"
 #include "xvidcap-dbus-glue.h"
+
+extern GtkWidget *xvc_ctrl_main_window;
 
 static void xvc_server_object_class_init (XvcServerObjectClass * klass);
 static void xvc_server_object_init (XvcServerObject * server);
@@ -114,3 +118,69 @@ xvc_dbus_echo_string (XvcServerObject * server, gchar * original, gchar ** echo,
 
     return TRUE;
 }
+
+// dbus_glib_marshal_xvc_server_BOOLEAN__POINTER,
+gboolean
+xvc_dbus_stop (XvcServerObject * server, GError ** error) {
+    GladeXML *xml = NULL;
+    GtkWidget *w = NULL;
+ //   gboolean active = FALSE;
+
+    // get the filename button widget
+    xml = glade_get_widget_tree (xvc_ctrl_main_window);
+    g_assert (xml);
+    w = glade_xml_get_widget (xml, "xvc_ctrl_stop_toggle");
+    g_assert (w);
+	
+//	active = !gtk_toggle_tool_button_get_active(GTK_TOGGLE_TOOL_BUTTON(w));
+    gtk_toggle_tool_button_set_active (GTK_TOGGLE_TOOL_BUTTON (w), 
+	TRUE);
+//	active);
+
+	return TRUE;
+
+}
+
+// dbus_glib_marshal_xvc_server_BOOLEAN__POINTER,
+gboolean
+xvc_dbus_start (XvcServerObject * server, GError ** error) {
+    GladeXML *xml = NULL;
+    GtkWidget *w = NULL;
+    //gboolean active = FALSE;
+
+    // get the filename button widget
+    xml = glade_get_widget_tree (xvc_ctrl_main_window);
+    g_assert (xml);
+    w = glade_xml_get_widget (xml, "xvc_ctrl_record_toggle");
+    g_assert (w);
+	
+	//active = !gtk_toggle_tool_button_get_active(GTK_TOGGLE_TOOL_BUTTON(w));
+    gtk_toggle_tool_button_set_active (GTK_TOGGLE_TOOL_BUTTON (w), 
+	TRUE);
+//	active);
+
+	return TRUE;
+
+}
+
+// dbus_glib_marshal_xvc_server_BOOLEAN__POINTER,
+gboolean
+xvc_dbus_pause (XvcServerObject * server, GError ** error) {
+    GladeXML *xml = NULL;
+    GtkWidget *w = NULL;
+    gboolean active = FALSE;
+
+    // get the filename button widget
+    xml = glade_get_widget_tree (xvc_ctrl_main_window);
+    g_assert (xml);
+    w = glade_xml_get_widget (xml, "xvc_ctrl_pause_toggle");
+    g_assert (w);
+	
+	active = !gtk_toggle_tool_button_get_active(GTK_TOGGLE_TOOL_BUTTON(w));
+    gtk_toggle_tool_button_set_active (GTK_TOGGLE_TOOL_BUTTON (w), 
+	active);
+
+	return TRUE;
+
+}
+
