@@ -26,9 +26,13 @@ extern "C"
     } XvcServerObject;
 
     XvcServerObject *xvc_server_object_new ();
+    GType xvc_server_object_get_type ();
+
     gboolean xvc_dbus_echo_string (XvcServerObject * server, gchar * original,
                                    gchar ** echo, GError ** error);
-    GType xvc_server_object_get_type ();
+    gboolean xvc_dbus_stop (XvcServerObject * server, GError ** error);
+    gboolean xvc_dbus_start (XvcServerObject * server, GError ** error);
+    gboolean xvc_dbus_pause (XvcServerObject * server, GError ** error);
 
 #define XVC_SERVER_OBJECT_GET_CLASS(object)  (G_TYPE_INSTANCE_GET_CLASS ((object), xvc_server_object_get_type(), XvcServerObjectClass))
 #define XVC_SERVER_OBJECT(object)            (G_TYPE_CHECK_INSTANCE_CAST ((object), xvc_server_object_get_type(), XvcServerObject))
