@@ -1,4 +1,10 @@
 
+2007-10-24  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src: dbus-server-object.c, xvidcap-dbus.xml,
+		dbus-server-object.h, xvidcap-dbus-client.c:
+		added start, stop, pause remote functions
+		to dbus server.
+
 2007-10-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* net.jarre_de_the.Xvidcap.service.in, Makefile.am,
 		src: dbus-server-object.c, 
